m-hub-frontend/src/app/components/structure-view/structure-view.component.scss
@use '@angular/material' as mat;
@use '../../../theme-setup' as vars;

:host {
    height: 100%;
    width: 100%;
    display: flex;
    overflow-x: hidden;
}

.structure-info-panel {
    display: flex;
    flex-direction: row;
    position: relative;
    width: 100%;
    height: 100%;
    padding: 8px 12px 12px;
    overflow-y: auto;
    gap: 2rem;
    box-shadow: 0 4px 24px rgba(0, 0, 0, 0.12);
    border: 2px solid mat.get-color-from-palette(vars.$my-secondary, 700);
    border-radius: 12px;
    transition: all 0.4s ease-in-out;
}

.structure-tree-container {
    min-width: 320px;
    height: fit-content;
    margin-left: 8px;
}

.structure-content-container {
    display: flex;
    flex-direction: column;
    flex: 1;
}

.horizontal-divider {
    margin: 0 12px 0 0;
}

.vertical-divider {
    margin: 12px 0;
}

.loading-wrapper {
    position: absolute;
    inset: 0;
    display: flex;
    align-items: center;
    justify-content: center;
}

.loading-spinner {
    margin: auto;
    align-items: center;
    justify-content: center;
}

.close-button {
    position: absolute;
    top: 8px;
    right: 12px;
    z-index: 1000;
}

@media (max-width: 820px) {
    .structure-info-panel {
        display: flex;
        flex-direction: column;
        gap: 1.4rem;
    }

    .structure-tree-container {
        margin-left: 0;
    }
}

